# frmatcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
frmatcher/: __init__.py  fastq_file_name_checker.py
frmatcher/config/: patterns.yaml
notebooks/: dev.ipynb
tests/: test_fastq_file_name_checker.py
